# agent-consistency-refund-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
refund_demo/: agents.py  cli.py  config.py  contracts.py  providers.py  reporting.py  services.py  web.py  workflow.py
refund_demo/static/: app.js  index.html  styles.css
samples/expected/: happy_path_console.txt  missing_handoff_console.txt  pending_refund_console.txt  stale_policy_console.txt
samples/inputs/: happy_path.json  missing_handoff.json  pending_refund.json  stale_policy.json
tests/: test_cli_smoke.py  test_config_and_provider.py  test_docker_setup.py  test_readme_assets.py  test_web_app.py  test_workflow.py
