[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-consistency-refund-demo"
version = "0.1.0"
description = "A multi-agent refund workflow demo for agent-consistency."
requires-python = ">=3.9"
authors = [
  { name = "Karim Baidar", email = "karimbaidar@yahoo.com" }
]
dependencies = [
  "agent-consistency==0.1.1"
]

[tool.setuptools.packages.find]
include = ["refund_demo*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
